--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,14 @@
 }
 
 
+body{
+    overflow-x: hidden;
+    background:#07472f;
+    width:100%;
+    height:100vh;
+}
+
+
 :root{
     --color-primary:#007bff;
     --color-secondary:#ffc800;
@@ -21,17 +29,16 @@ a{
     
 }
 
-.container{
-    max-width:1200px;
-    margin:auto;
+img{
+    width:100vh;
 }
 
 
-header{
-    background:#07472f;
-    width:100%;
-    height:100vh;
-    position:relative;
+
+
+.container{
+    max-width:1200px;
+    margin:0 auto;
 }
 
 
@@ -50,13 +57,12 @@ header{
      display:flex;
      align-items:center;
      justify-content:space-between;
-     padding:25px  0;
 }
 
 .header-nav{
     display:flex;
     align-items:center;
-  
+    padding:25px 0;
 }
 
 nav ul{
@@ -70,6 +76,7 @@ nav ul li{
 
 nav ul li a{
     color:#fff;
+    font-size:1.1rem;
 }
 
 
@@ -82,7 +89,7 @@ nav ul li a:hover{
 .btn{
     background:var(--color-secondary);
     padding:13px 40px;
-    border-radius:6px;
+    border-radius:25px;
     color:#fff;
     border:none;
     outline:none;
@@ -91,11 +98,9 @@ nav ul li a:hover{
 
 
 .hero-row{
-    width:100%;
-    position:absolute;
-    top:30%;
     display:flex;
     align-items:center;
+    margin-top:6em;
 }
 
 
@@ -104,7 +109,7 @@ nav ul li a:hover{
 }
 
 .right-col{
-    width:50%;
+    width:55%;
 }
 
 .left-col h1{
@@ -115,7 +120,7 @@ nav ul li a:hover{
 
 
 .right-col img{
-     width:80%;
+     max-width:100%;
 }
 
 .left-col p{
@@ -139,9 +144,7 @@ nav ul li a:hover{
       }
 
 
-      header{
-        height:100vh;
-      }
+    
 
       .header-row{
         padding:25px 40px;
