--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,14 @@
 
 body{
     overflow-x: hidden;
-    background:#07472f;
+    background:var(--color-primary);
     width:100%;
     height:100vh;
 }
 
 
 :root{
-    --color-primary:#007bff;
+    --color-primary:#0d3636;
     --color-secondary:#ffc800;
     --dark-color:#000;
 }
